[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_info"
version = "0.1.0"
description = "A production-grade system to fetch cryptocurrency information and prices"
readme = "README.md"
authors = [
    {name = "Devin AI", email = "devin-ai-integration@users.noreply.github.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
